--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
     <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.book_news_api">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
+        android:usesCleartextTraffic="true"
         android:label="book_news_api"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
