--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   connectivity_plus: ^2.2.1
   expandable_text: ^2.2.0
   readmore: ^2.1.0
+  carousel_images: ^1.1.2
 
 dev_dependencies:
   flutter_test:
